--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -1,12 +1,14 @@
 @CHARSET "ISO-8859-1";
 
-@import url("bootstrap.css");
-@import url("bootstrap.min.css");
-@import url("bootstrap.responsive.min.css");
 @import url("bootstrap-responsive.css");
 
+@import url("bootstrap.css");
+
+@import url("bootstrap.min.css");
+
+/* @import url("bootstrap.responsive.min.css"); */
+
 body {
-	
 	margin: 0px;
 	padding: 0px;
 	background-color: #f5f5f5;
@@ -19,7 +21,29 @@ body {
 	max-width: 900px;
 }
 
-#resultats{
-	
-		
+.form-signin {
+	max-width: 400px;
+	padding: 19px 29px 29px;
+	margin: 0 auto 20px;
+	background-color: #fff;
+	border: 1px solid #e5e5e5;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
+	-moz-box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
+	box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
 }
+
+.form-signin .form-signin-heading,.form-signin .checkbox {
+	margin-bottom: 10px;
+}
+
+.form-signin input[type="text"],.form-signin input[type="password"] {
+	font-size: 16px;
+	height: auto;
+	width: 300px;
+	margin-bottom: 15px;
+	padding: 7px 9px;
+}
+
