--- a/WebContent/css/generalHomePages.css
+++ b/WebContent/css/generalHomePages.css
@@ -8,7 +8,8 @@
 	padding-left: 28pt;
 	background-color: transparent;
 	text-align: left;
-	color: blue;
+/* 	color: blue; */
+	color:rgb(0, 136, 204);
 	border-bottom-color: gray;
 	border-bottom-style: solid;
 	padding-top: 5pt;
@@ -22,13 +23,22 @@
 	width: 100%;
 }
 
-.btn-primary{
+/* .btn-primary{ */
 	
-	background-image: linear-gradient(to bottom, #39B7CD, #39B7CD);
+/* 	background-image: linear-gradient(to bottom, #39B7CD, #39B7CD); */
+/* } */
+
+/* .btn-primary:hover,.btn-primary:focus,.btn-primary:active,.btn-primary.active,.btn-primary.disabled,.btn-primary[disabled] */
+/* 	{	 */
+/* 	background-color: #39B7CD;	 */
+/* } */
+
+.thumbnails li :HOVER {
+	background-color: #B2D2FF;
+	text-decoration: none;
 }
 
-.btn-primary:hover,.btn-primary:focus,.btn-primary:active,.btn-primary.active,.btn-primary.disabled,.btn-primary[disabled]
-	{	
-	background-color: #39B7CD;	
+.thumbnails{
+	padding-top: 15px;
 }
 
