--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -21,6 +21,11 @@ body {
 	max-width: 900px;
 }
 
+.containerLog {
+	width: auto;
+	max-width: 1600px;
+}
+
 .form-signin {
 	max-width: 400px;
 	padding: 19px 29px 29px;
@@ -48,5 +53,24 @@ body {
 }
 
 .params{
+	
+}
+
+#tableCharts td{
+	padding-left: 25px;
+	width : 750px;
+	background-color: white;
+}
+
+#tableCharts td:last-child{
+	width : 750px;
+/* 	padding-left: 0px; */
+/* 	padding-right: 25px; */
+}
+
+#carte td{
+/* 	width : 1500px; */
+	
+/* 	text-align: center; */
 	
 }
