-ajout de statistiques

--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -57,7 +57,7 @@ body {
 }
 
 #tableCharts td{
-/* 	padding-left: 25px; */
+/* 	padding-top: 50px; */
 /* 	width : 750px; */
 	background-color: white;
 }
